2009-01-21  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/{gnome-2.26.modules,gnome-suites-2.26.modules}:
	GStreamer switched to git.  (closes: #551241)

2009-01-21  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added gnome-media dependency on
	libcanberra.

2009-01-20  Suman Manjunath  <msuman@novell.com>

	* modulesets/gnome-external-deps-2.26.modules: Use samba4 alpha6 and
	libmapi 0.8.

2009-01-20  Suman Manjunath  <msuman@novell.com>

	* modulesets/gnome-external-deps-2.26.modules: Use libical 0.43

2009-01-20  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: Fix
	the md5sum of libical-0.42.tar.gz

2009-01-19  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Make brasero
	depend on libxml2 not libxml.

2009-01-19  Vivien Malerba  <malerba@gnome-db.org>

	* modulesets/gnome-suites-2.26.modules: updated libgda to 3.99.9

2009-01-19  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.26.modules: clean brasero deps and
	add brasero as suggest for totem to its plugin (to be honest not
	needed at compile time... mayby just <after>?)

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: add some missing version
	properties to make convert-to-tarballs.py happy

2009-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules,
	modulesets/gnome-2.26.modules: moved libnotify to external
	dependencies.

2009-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules: added nautilus-cd-burner.

2009-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: removed remaining references 
	to nautilus-cd-burner.

2009-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules,
	modulesets/gnome-external-deps-2.26.modules: updated according to