@@ -165,8 +165,9 @@
 	repo		CDATA	#IMPLIED
 	module		CDATA	#IMPLIED
 	checkoutdir	CDATA	#IMPLIED
-	override-checkoutdir (yes|no) "yes"
-	update-new-dirs (yes|no) "yes"
+	override-checkoutdir (yes|no) "yes"  <!-- CVS only -->
+	update-new-dirs (yes|no) "yes"       <!-- CVS only -->
+	source-subdir   CDATA   #IMPLIED     <!-- Tarballs only  -->
 	revision	CDATA	#IMPLIED
 	tag             CDATA   #IMPLIED
 	version		CDATA	#IMPLIED
