@@ -1,3 +1,9 @@
+2009-01-21  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/tarball.py:
+	* modulesets/moduleset.dtd: added a new source-subdir attribute (for
+	tarball "version control"), required by Samba4 and related libraries.
+
 2009-01-21  Marc-André Lureau  <marcandre.lureau@gmail.com>
 
 	* modulesets/{gnome-2.26.modules,gnome-suites-2.26.modules}:
